# burtu_spele

./: .replit  README.md  db.py  index.html  main.py  pyproject.toml  rezultati.txt  spele.html  style.css  tops.html
static/: style.css
templates/: index.html  spele.html  tops.html
