[tool.poetry]
name = "repl_python3_beta_burtuspele"
version = "0.1.0"
description = ""
authors = ["LarisaKosjanenk <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
